fix: overflow scroll 설정

--- a/src/index.css
+++ b/src/index.css
@@ -13,5 +13,6 @@
     width: 350px;
     height: 500px;
     background-color: whitesmoke;
+    overflow: scroll;
   }
 }
